--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,4 +31,6 @@ dependencies {
     annotationProcessor "android.arch.persistence.room:compiler:1.0.0"
 
     implementation 'com.android.support:cardview-v7:26.1.0'
+
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 }
